<resources>
    <string name="app_name">Math Game</string>
    <string name="level_select">Level Select</string>
    <string name="high_scores">High Scores</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="quit">Quit</string>
    <string name="Level_0">0</string>
    <string name="level_1">1</string>
    <string name="level_2">2</string>
    <string name="level_3">3</string>
    <string name="level_4">4</string>
    <string name="level_5">5</string>
    <string name="level_6">6</string>
    <string name="level_7">7</string>
    <string name="level_8">8</string>
    <string name="level_9">9</string>
    <string name="title_activity_score">ScoreActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>