<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelSelectActivity">

    <TextView
        android:id="@+id/ScreenHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/level_select"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Level0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Level_0"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Level8" />

    <Button
        android:id="@+id/Level5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_5"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Level2" />

    <Button
        android:id="@+id/Level8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_8"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Level5" />

    <Button
        android:id="@+id/level1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/level_1"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/Level2"
        app:layout_constraintTop_toBottomOf="@+id/ScreenHeader" />

    <Button
        android:id="@+id/Level4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/level_4"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/Level5"
        app:layout_constraintTop_toBottomOf="@+id/level1" />

    <Button
        android:id="@+id/Level7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/level_7"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/Level8"
        app:layout_constraintTop_toBottomOf="@+id/Level4" />

    <Button
        android:id="@+id/Level6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_6"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/Level5"
        app:layout_constraintTop_toBottomOf="@+id/Level3" />

    <Button
        android:id="@+id/Level3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/level_3"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/Level2"
        app:layout_constraintTop_toBottomOf="@+id/ScreenHeader" />

    <Button
        android:id="@+id/Level2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/level_2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScreenHeader" />

    <Button
        android:id="@+id/Level9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_9"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/Level8"
        app:layout_constraintTop_toBottomOf="@+id/Level6" />

</androidx.constraintlayout.widget.ConstraintLayout>